--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "forever restart -c 'nodemon -r dotenv/config --experimental-json-modules' src/index.js"
   },
   "keywords": [],
   "author": "",
